--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
 
     
 
@@ -100,7 +100,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bH7IohCU2O3232TuWVRdTQ9OBvfZeTw3GMh/CjsowkBf8lQCtxuBbYtDDhoId8juw41XO0UqjzGNmipOTgOkKDioseOYl7VP/+OPFcnCve3isa7HqXrEk7x97mxufqZ5">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fdFEG23dE2siFQgRM+H1YV0s5jj5DU+1Vwkmk8wFtStLo0IvdqghNHRtKG9bUtAC7dQmaAJe45mqwSpq0f+Z5vqcFpz4IGHnAebQFhPTJkGWdGLvswByZhOh4oOnKd96">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
