--- a/page7.html
+++ b/page7.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="mbr-section content5 cid-r6zFIJD3CJ" id="content5-3r">
+<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="mbr-section content5 cid-r6zFIJD3CJ" id="content5-3r">
 
     
 
@@ -147,7 +147,7 @@
 <br>Hillsdale
 <br>North Adams-Jerome
 <br>Reading
-<br>Will Carleton Academy.</p>
+<br>Will Carleton Academy</p>
                             </div>
                         </div>
                     </div>
