--- a/page2.html
+++ b/page2.html
@@ -47,14 +47,14 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page5.html">About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">Products</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">Media</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page6.html">Reviews</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">Contact</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page7.html">Community</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.facebook.com/Barrett-Insurance-202507443153218/" target="_blank"><span class="socicon socicon-facebook mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://twitter.com/barrettinsure" target="_blank"><span class="socicon socicon-twitter mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.instagram.com/barrettinsurance/" target="_blank"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.linkedin.com/in/barrett-insurance-b91b934a" target="_blank"><span class="socicon socicon-linkedin mbr-iconfont mbr-iconfont-btn"></span></a></li></ul>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page5.html">About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">Products</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">Media</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page7.html">Community</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page6.html">Reviews</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">Contact</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.facebook.com/Barrett-Insurance-202507443153218/" target="_blank"><span class="socicon socicon-facebook mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://twitter.com/barrettinsure" target="_blank"><span class="socicon socicon-twitter mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.instagram.com/barrettinsurance/" target="_blank"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://www.linkedin.com/in/barrett-insurance-b91b934a" target="_blank"><span class="socicon socicon-linkedin mbr-iconfont mbr-iconfont-btn"></span></a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:+1-234-567-8901">Call us today! (517) 849-1000
                     </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own website for free</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
 
     
 
@@ -100,7 +100,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fdFEG23dE2siFQgRM+H1YV0s5jj5DU+1Vwkmk8wFtStLo0IvdqghNHRtKG9bUtAC7dQmaAJe45mqwSpq0f+Z5vqcFpz4IGHnAebQFhPTJkGWdGLvswByZhOh4oOnKd96">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zCuZ8rhV89AqyvuXx+t3WsBFpnZwsk29+UDSr2rTUMUdX7mzzMy9g57B83jAMPF2TeDQPLvM/YeT/NggFR9DC55+q6HVnP2MZAywY+Eh61ep3n0OFFGnYI5dxvU3gct+">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
