--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="index.html">
                         <img src="assets/images/logocolor-300x121.jpg" alt="Mobirise" title="" style="height: 5rem;">
                     </a>
                 </span>
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="header9 cid-r6gvUyZZ2D mbr-fullscreen mbr-parallax-background" id="header9-v">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header9 cid-r6gvUyZZ2D mbr-fullscreen mbr-parallax-background" id="header9-v">
 
     
 
@@ -299,7 +299,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form! One of our insurance experts will contact you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fgltmkqdRKtWvyBEG4P7Ww3k8+epKCCFJZrHyT6Us45+6IF5EbA0A/39pdxq0CCjCxnTHdRuR11W9i7XuuLXyFilHp+dZmvh3k1ruBO4SW08ONMojE4wVf9b+Cj9Hf8u">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qp4/98nfUwln0ek8xZJpfs4irijxd8MzxIcAi6cNe7WOMW/gjyN9At9viLCoCInLdMqb1PgUJFg+KBbixBcc18GeDIMpg7yFyT/cCaWTVXJ38GR73bOLHC6+GgYJygrp">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
