--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
 
     
 
@@ -100,7 +100,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="csJ8s7DqOlMvVtUakOc8QtVFEUOlF0GgSqlP8jHik1qajeobWOYe+iWiEbldjZ/SZRtRj1sWU82a6IzJnkepA7juXwEt5q6c8tbtSpA69UbCVFMDtVZA4mdb6L5igJp3">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="p6TRu/Sphg1GQ0TgCtYcTBB+bfk8EzxnUqaqE9ALGgTLTBWE9vYzpsEdYWpBzUbeTUWaIgOC0t7lASYiJDdUYbp2YrrO2kmY0bi2q9Medvw08C2kBUvEqZOnNWyfshYY">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
